syntax = "proto3";

option go_package = "service/contact";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package contact_service;

service ContactService {
  rpc AuthIntegration(AuthIntegrationRequest) returns (google.protobuf.Empty) {
    option(google.api.http) = { get: "/api/oauth/sign_in" };
  }

  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse) {
    option(google.api.http) = { get: "/api/account/{id}/contacts" };
  }
}

message AuthIntegrationRequest {
  string code = 1; // код авторизации
  string state = 2;
  string referer = 3;
  int32 platform = 4;
  string client_id = 5; // id интеграции
}

message ListContactsRequest {
  uint64 id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListContactsResponse {
  repeated Contact items = 1;
}

message Contact {
  uint64 id = 1;
  string name = 2;
  string first_name = 3;
  string last_name = 4;
  uint64 responsible_user_id = 5;
  uint64 created_at = 6;
  uint64 created_by = 7;
  uint64 updated_at = 8;
  uint64 updated_by = 9;
  bool is_deleted = 10;
  bool is_unsorted = 11;
  repeated CustomFieldsValue custom_field_values = 12;
  uint64 account_id = 13;
}

message CustomFieldsValue {
  uint64 field_id = 1;
  string field_name = 2;
  string field_code = 3;
  string field_type = 4;
  repeated Values values = 5;
  message Values {
    string value = 1;
    uint64 enum_id = 2;
    string enum_code = 3;
  }
}
